--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="vegas/vegas.min.css" rel="stylesheet">
+	<link href="css/vg.css" rel="stylesheet">
+
 	<title>OTTCat</title>
 	
 <link rel="icon" href="images/OTTCat72x72.png" />
@@ -15,7 +17,7 @@
 	<div class="container py-3">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="https://www.ottcat.com/"> Home </a>
+              <a class="navbar-brand" href="https://home.ottcat.com/"> Home </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -36,6 +38,11 @@
             </div>
           </nav>
 		  
+	</div>
+
+	<div id="content">
+		<h1>OTTCat Studio</h1>
+			<p><strong>Animation</strong><br>Mobile Game<br>Pixel Art </p>	
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
