아이콘추가

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
 	<div id="content">
 		<h1>OTTCat Studio</h1>
 			<p><strong>Animation</strong><br>Mobile Game<br>Pixel Art </p>	
+			<div class="row">
+				<div class="col">
+					<a href="https://www.facebook.com/ottcat" target="_blank">
+					<img src="images/facebook_whitelogo.png" class="img-fluid" alt="...">
+				</a>
+				</div>
+				<div class="col">
+					<a href="https://twitter.com/myottcat" target="_blank">
+					<img src="images/twitter_whitelogo.png" class="img-fluid" alt="...">
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://www.youtube.com/c/ottcat" target="_blank">
+					<img src="images/youtube_logo.png" class="img-fluid" alt="...">
+					</a>
+				</div>
+				<div class="col">
+					<a href="https://opensea.io/ottcat" target="_blank">
+					<img src="images/opensea-whitelogo.png" class="img-fluid" alt="...">
+					</a>
+				</div>
+			</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -58,6 +80,8 @@
 						{src:'images/2.jpg'},
 						{src:'images/3.jpg'},
 						{src:'images/4.jpg'},
+						{src:'images/5.jpg'},
+						{src:'images/6.jpg'},
 					],
 					delay:4000
 				});			
